Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-43505

Qt relies on kqueue rather than FSEvents to monitor the directories on MacOSX

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.5.0
    • 5.4.0
    • None
    • 3d17b73377b4dbab9cc0b989cae44c1791cb726c

    Description

      Apparently the latest Qt relies on kqueue rather than FSEvents to monitor the directories.

      Our Qt application crashes when we monitor more than a couple thousand directories with QFileSystemWatcher on MacOSX.

      This is a known limitation of kqueue, and as explained in bug #2478 the solution is to use FSEvents instead:
      https://bugreports.qt-project.org/browse/QTBUG-2478

      We prepared a small PoC to reproduce the problem, you can find it here:
      git clone https://github.com/stolowski/qt-fswatcher-test.git
      cd qt-fswatcher-test.git
      qmake
      make
      ./qt-fswatcher-test

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            dedietri Gabriel de Dietrich (drgvond)
            nervous Luca Gibelli
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes